[gd_scene load_steps=16 format=3 uid="uid://nahiaanmaaht"]

[ext_resource type="Script" path="res://Levels/TutorialLevel/Scripts/TutorialDialogSystem.gd" id="1_h8c1m"]
[ext_resource type="AudioStream" uid="uid://ogc4sigwfgk" path="res://Levels/TutorialLevel/Music_SoundStuff/talking.mp3" id="2_17o52"]
[ext_resource type="FontFile" uid="uid://f61n4ons5do8" path="res://NotoSansJP-VariableFont_wght.ttf" id="2_ln0dt"]
[ext_resource type="FontFile" uid="uid://csce4y6meygdo" path="res://Ghost/Fonts/ReggaeOne-Regular.ttf" id="5_blfry"]
[ext_resource type="AudioStream" uid="uid://bhbcj1hd6t40q" path="res://Levels/TutorialLevel/Music_SoundStuff/Here Comes The Guild Members.mp3" id="5_i57ns"]
[ext_resource type="AudioStream" uid="uid://judrq2cwhasi" path="res://Background/ElegantGarden.mp3" id="6_lic20"]
[ext_resource type="Texture2D" uid="uid://cxu1pr16q1ma" path="res://Ghost/Sprites/Dialog/Box.png" id="6_ql6uo"]
[ext_resource type="Texture2D" uid="uid://c7hss1ojutfmy" path="res://Player/Sprites/GolemSprite-0001.png" id="6_wkhw7"]
[ext_resource type="AudioStream" uid="uid://b442ovo7mu8tk" path="res://Levels/TutorialLevel/Music_SoundStuff/SwiftWindOfTheForest.mp3" id="7_lrjli"]
[ext_resource type="Script" path="res://Ghost/Scripts/FloatingCharacter.gd" id="9_txhm0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_am7qi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ql6uo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ntf7p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GhostIllust:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_obwk1"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GhostIllust:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v0cll"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GhostIllust:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0m3t6"]
_data = {
"RESET": SubResource("Animation_ntf7p"),
"fade_in": SubResource("Animation_obwk1"),
"fade_out": SubResource("Animation_v0cll")
}

[node name="TutorialDialogSystem" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 857.0
offset_right = 1000.0
offset_bottom = 897.0
script = ExtResource("1_h8c1m")
metadata/_edit_group_ = true

[node name="Bard" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -679.0
offset_top = -147.0
offset_right = -141.0
offset_bottom = -19.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_ln0dt")
theme_override_font_sizes/normal_font_size = 70
text = "Bard"

[node name="???" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -679.0
offset_top = -147.0
offset_right = -143.0
offset_bottom = 7.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_ln0dt")
theme_override_font_sizes/normal_font_size = 70
text = "???"

[node name="Golem" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -679.0
offset_top = -147.0
offset_right = 242.0
offset_bottom = 65.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_ln0dt")
theme_override_font_sizes/normal_font_size = 70
text = "Golem"

[node name="Golem_Minion" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -679.0
offset_top = -147.0
offset_right = 223.0
offset_bottom = 101.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_ln0dt")
theme_override_font_sizes/normal_font_size = 70
text = "Golem Minion"

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_17o52")
volume_db = -10.0

[node name="Dialog" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -674.0
offset_top = -53.0
offset_right = 681.0
offset_bottom = 177.0
theme_override_fonts/normal_font = ExtResource("2_ln0dt")
theme_override_font_sizes/normal_font_size = 51

[node name="DialogJP" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -674.0
offset_top = -53.0
offset_right = 681.0
offset_bottom = 177.0
theme_override_fonts/normal_font = ExtResource("5_blfry")
theme_override_font_sizes/normal_font_size = 51

[node name="Dialog_Box" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.31231, 1.17143)
sprite_frames = SubResource("SpriteFrames_am7qi")
frame_progress = 0.791521

[node name="DialogueBG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_i57ns")
volume_db = -5.0

[node name="DialogueBG2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lic20")
volume_db = -10.0

[node name="DialogueBG3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_lrjli")

[node name="Timer" type="Timer" parent="."]

[node name="Transition_Time" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0m3t6")
}

[node name="GhostIllust" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(0, -300)
scale = Vector2(5, 5)
texture = ExtResource("6_wkhw7")
script = ExtResource("9_txhm0")

[node name="SkipButton" type="Button" parent="."]
layout_mode = 0
offset_left = 556.0
offset_top = -818.0
offset_right = 597.0
offset_bottom = -786.0
scale = Vector2(4.75851, 3.67878)
theme_override_fonts/font = ExtResource("2_ln0dt")
text = "Skip"

[connection signal="finished" from="Voice" to="." method="_on_voice_finished"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
